--- a/report/tex/acronyms.tex
+++ b/report/tex/acronyms.tex
@@ -10,3 +10,4 @@
 \acrodef{gui}[GUI]{Graphical User Interface}
 \acrodef{json}[JSON]{JavaScript Object Notation}
 \acrodef{foss}[FOSS]{Free and Open-Source Software}
+\acrodef{ui}[UI]{User Interface}
