--- a/report/tex/design/database_design.tex
+++ b/report/tex/design/database_design.tex
@@ -1,2 +1,2 @@
 \section{Database design}
-The database has to store all of the information in the GIRAF system. In order to achieve this in a clever way some preliminary work has to be done. This includes an entity-relation ship diagram of the database and an application programmable interface (API) that provides an easy way to interact with the database. 
+The database has to store all of the information in the GIRAF system. In order to achieve this in an efficient way some preliminary work has to be done. This includes an entity-relationship diagram of the database and an application programmable interface (API) that provides an easy way to interact with the database. 
