--- a/report/tex/design/server_api.tex
+++ b/report/tex/design/server_api.tex
@@ -61,4 +61,4 @@ the requested data for a read request. An example of a possible response to the 
 \subsection{Overview}
 
 The final \ac{api} is simple, but powerful enough that it can do what it needs to do, partly due to the adherence to the \ac{crud} principles. The full
-documentation for the \ac{api} can be seen in Appendix \autoref{app:api}.
+documentation for the \ac{api} can be seen in Appendix \ref{app:api}.
