--- a/report/tex/implementation/introduction.tex
+++ b/report/tex/implementation/introduction.tex
@@ -1,1 +1,1 @@
-\emph{In this chapter the implementation of the design of the modules, the \ac{api} and the synchronization is described. It should be noted that there will be long listings in this chapter. This is to ease the understanding of the code for coming students building on top of this report.} 
+\emph{In this chapter the implementation of the design of the modules, the \ac{api} and the synchronization is described. It should be noted that there will be long listings in this chapter. This is to ease the understanding of the code for coming students building on top of this project.} 
