--- a/report/tex/introduction/introduction.tex
+++ b/report/tex/introduction/introduction.tex
@@ -1,3 +1,7 @@
+\emph{In this chapter the workflow of the Wasteland project is presented along with the overall architecture of the \ac{giraf} system and the problem statement for the Wasteland project.}
+
+\vspace{10px}
+
 As mentioned in \autoref{cha:common}, \ac{giraf}'s main objective is to improve communication between children
 with autism and their guardians. The primary tool for the communication will be a tablet that the children will
 use either alone or with their guardian. In this context a single tablet needs to be able to accommodate many
