--- a/report/tex/process_progress/approach.tex
+++ b/report/tex/process_progress/approach.tex
@@ -1,5 +1,5 @@
 \section{Approach}
-As described in \ac{cha:common}, a multi project of this nature requires a lot of structure and planning. In one of the first multi group meetings, all of the groups agreed on a development method, namely SCRUM. The development method used by the individual groups was up to them to decide. It was decided that all of the groups would meet on a weekly basis and discuss the progress of the individual groups and problems that might arise.  
+As described in \autoref{cha:common}, a multi project of this nature requires a lot of structure and planning. In one of the first multi group meetings, all of the groups agreed on a development method, namely SCRUM. The development method used by the individual groups was up to them to decide. It was decided that all of the groups would meet on a weekly basis and discuss the progress of the individual groups and problems that might arise.  
 
 \subsection{SCRUM implementation}
 \label{sub:scrum_implementation}
