--- a/report/tex/process_progress/product_backlog.tex
+++ b/report/tex/process_progress/product_backlog.tex
@@ -1,5 +1,5 @@
 \section{Product Backlog}
-The tasks were prioritized and added to sprint backlogs and as work progressed new task were added to the backlog and tasks that were completed got a check mark. Due to the fact that estimation in software development is often very difficult, the estimates were done in numbers representing the expected effort required to complete them. The priority goes from 1-10, with 1 being highest priority. The following table contains the product backlog for the project.
+For requirements management the tasks were prioritized, estimated with regards to complexity and added to a product backlog and as work progressed new task were added to the backlog and tasks that were completed were marked as finished. Due to the fact that estimation in software development is often very difficult, the estimates were done in numbers representing the expected effort required to complete them, not in hours or days. The priority goes from 1-5, with 1 being highest priority. The following table contains the product backlog for the project.
 
 \begin{center}
 	\begin{tabular}{| c | p{4cm} | c | c | l |}
