--- a/report/tex/reflection/conclusion.tex
+++ b/report/tex/reflection/conclusion.tex
@@ -1,4 +1,4 @@
 \section{Conclusion}
-We have set up a central server with a database containing the information needed in the \ac{giraf} system. We have also implemented a local database, however this is not accessible by applications on an Android device. We have created an \ac{api} to facilitate access and CRUD actions on the central database and tested the implemented functionality with unit tests. We have made basic two-way synchronization between a local database and the central server. There is still need for further development, especially on the synchronization.
+We have set up a central server with a database containing the information needed in the \ac{giraf} system. We have also implemented a local database, however this is not accessible by applications on an Android device, due to the fact that this would require Puddle to be a library, which due to time constraints had to be left as future work. We have created an \ac{api} to facilitate access and CRUD actions on the central database and tested the implemented functionality with unit tests. We have made basic two-way synchronization between a local database and the central server. There is still need for further development, especially on the synchronization.
 
 We have used SCRUM for the project development. 
