--- a/report/tex/reflection/introduction.tex
+++ b/report/tex/reflection/introduction.tex
@@ -1,1 +1,1 @@
-\emph{In this chapter we will conclude the report and reflect on the project, working in a multiproject, give a status of the project and a list of future work.} 
+\emph{In this chapter we will conclude the report and reflect on the project and working in a multiproject. We will also give a status of the project and a list of future work.} 
