--- a/report/tex/reflection/project_evaluation.tex
+++ b/report/tex/reflection/project_evaluation.tex
@@ -1,12 +1,13 @@
 \section{Project Evaluation}
-We had a really good supervisor, which helped us keep the project on track.
-The primary goal of the project was initially synchronization between two databases, a local tablet-database and a central server, but this was severely inhibited by the fact that the central database was virtually non-existent. This meant that we had to spend time implementing a server and a communication \ac{api} before the expected project, i.e. the synchronization could be started. This led to a very basic synchronization functionality, more a proof of concept than anything else.
+During the semester we had an excellent supervisor, which helped us keep the project on track.
 
-The workflow was very influenced by the fact that this was a multiproject, which meant that the sprints were global. This sometimes clashed with the desired workflow of our project. 
+The primary goal of the project was initially synchronization between two databases, a local tablet-database and a central server, but this was severely inhibited by the fact that the central database was virtually non-existent. This meant that we had to spend time implementing a server and a communication \ac{api} before the expected project, i.e. the synchronization could be started. This led to a very basic synchronization functionality, more a proof of concept than anything else. The project would have benefited from an early prototype of the server application and the synchronization application being distributed among the groups in the multiproject, to see if there were errors or misconceptions in the design. However, due to the fact that a vast majority of the functionality had to be implemented to achieve a working prototype, there was no time to do this.
+
+The workflow was heavily influenced by the fact that this was a multiproject, which meant that the sprints were global. This sometimes clashed with the desired workflow of our project. 
 
 The multiproject communication was quite good, with meetings every week and good communication between the different subprojects relying on each other. It would have been good to have the common vision ready as early as possible. 
 
-The common development method was SCRUM, which for the multiproject worked. The sprints were generally of adequate length, considering the time frame of the multiproject, however a few sprints were too short. 
+The common development method was SCRUM, which for the multiproject worked. The sprints were generally of adequate length, considering the time frame of the multiproject, however a few sprints were too short and could have been merged. 
 
 The committees worked very well, especially at the beginning, in unifying the overall design, stories etc.
 
