--- a/report/tex/test/unit_test.tex
+++ b/report/tex/test/unit_test.tex
@@ -1,10 +1,10 @@
 \section{Unit Tests}
 Unit tests have been written for all modules of the server using the BOOST Unit Test framework. 
 
-The unit tests for the modules test that everything gets initialized properly, and that the functionality handles both expected and unexpected input adequately, thus a test that should fail and one that should pass is written for each functionality included in the final product. An example of a BOOST unit test for the connection module can be found in Appendix \autoref{app:unit_test}.
+The unit tests for the modules test that everything gets initialized properly, and that the functionality handles both expected and unexpected input adequately, thus at least a test that should fail and one that should pass is written for each functionality included in the final product. An example of a BOOST unit test for the connection module can be found in Appendix \ref{app:unit_test}.
 
-Furthermore the unit tests, specifically those of the API module, have been the basis of the integration tests of the API design. All the functionality is tested via unit tests to ensure that they conform to the design.
+Furthermore the unit tests, specifically those of the \ac{api} module, have been the basis of the integration tests of the \ac{api} design. All the functionality is tested via unit tests to ensure that they conform to the design.
 
-All in all, the group wrote 3 test suites, one for each module, containing 11 test cases with 110 tests. 
+All in all, the group wrote 3 test suites, one for each module, containing a total of 11 test cases with 110 tests. 
 
-The Java implementations were not tested due to time constraints that did not allow the group to acquaint themselves with another unit testing framework. They were however tested in implementation, and given correct input they provide the expected functionality.
+The Java implementations were not unit tested due to time constraints that did not allow the group to acquaint themselves with another unit testing framework. They were however tested in implementation, and given correct input they provide the expected functionality.
