--- a/report/tex/implementation/connection_module.tex
+++ b/report/tex/implementation/connection_module.tex
@@ -1,19 +1,19 @@
 \section{Connection Module}
 
-The connection module is implemented using the linux sockets and POSIX thread libraries. The two classes in the module, Connection and Listener, are mostly wrappers around socket functions,
-with various error handling and other convenience added. The framework deal with setting up threads. Some of this functionality will be described in this section.
+The connection module is implemented using the Linux sockets and POSIX thread libraries. The two classes in the module, \lstinline|Connection| and \lstinline|Listener|, are mostly wrappers around socket functions,
+with various error handling and other convenience added. The framework deals with setting up threads. This functionality will be described in this section.
 
 \subsection{The Connection Class}
 
-The Connection class, as mentioned in \autoref{cha:design} represents a TCP connection, either outgoing or incoming. As such it is implemented with two constructors,
-one taking no arguments which will initialize the instance so that it is ready to connect to a given host, as well as a constructor used by the Listener class that initializes the instance
-with the information needed to communicate with a client accepted by the Listener.
+The \lstinline|Connection| class, as mentioned in \autoref{cha:design} represents a TCP connection, either outgoing or incoming. As such it is implemented with two constructors,
+one taking no arguments which will initialize the instance so that it is ready to connect to a given host, as well as a constructor used by the \lstinline|Listener| class that initializes the instance
+with the information needed to communicate with a client accepted by said \lstinline|Listener|.
 
-The class exposes three functions which are just wrappers around the linux socket code, but includes error handling, namely \lstinline|connect_to_host|, \lstinline|send| and \lstinline|disconnect|. The function for receiving,
+The class exposes three functions which are just wrappers around the Linux socket code, but includes error handling, namely \lstinline|connect_to_host|, \lstinline|send| and \lstinline|disconnect|. The function for receiving,
 as seen in \autoref{lst:connection_receive} is a bit more involved.
 
 After the initial setup, it blocks at line 14 with a call to poll until data is available. When data becomes available,
-it will enter a loop which reads from the socket into a buffer, and places the contents of this buffer in a stringstream, a standard c++ class for building strings a section at a time.
+it will enter a loop which reads from the socket into a buffer, and places the contents of this buffer in a stringstream, a standard C++ class for building strings a section at a time.
 After reading it will check if more data is available from the socket, this time with a 100 millisecond time out, at line 31. It will continue reading until this poll times out. The reason
 that it is necessary to read the data this way, is the use of TCP. TCP is a stream socket, which means that it guarantees the arrival of data, but not that all data arrives at the same time.
 For this application, however, it is useless to have only part of a message, since a partial \ac{json} object can not be decoded, so the function reads until it is reasonably sure all data
@@ -23,8 +23,8 @@ has been received. In a production environment, the timeout may need to be incre
 
 \subsection{The Listener Class}
 
-The Listener class is used to wait for clients and make sure that said clients can be handled by the application. It exposes three functions \lstinline|start|, \lstinline|stop| and \lstinline|accept_client|.
-Each of these functions are direct wrappers of linux sockets, except for the fact that \lstinline|accept_client| automatically creates an instance of the Connection class to communicate with
+The \lstinline|Listener| class is used to wait for clients and make sure that said clients can be handled by the application. It exposes three functions \lstinline|start|, \lstinline|stop| and \lstinline|accept_client|.
+Each of these functions are direct wrappers of Linux sockets, except for the fact that \lstinline|accept_client| automatically creates an instance of the \lstinline|Connection| class to communicate with
 the client.
 
 \subsection{The Framework Functions}
@@ -42,29 +42,29 @@ pieces of information that is useful for the framework to operate the server, an
 \item The callback to run when a client connects. Provided as a parameter to \lstinline|run_server|.
 \item The thread the listener is allowed to block. Created in \lstinline|run_server| on line 12.
 \item A mutex for controlling when \lstinline|run_server| returns to the caller. Created in \lstinline|run_server| on line 4.
-\item A pointer to the \lstinline|Listener| instance for the server. Created in \lstinline|server_runner|, explained later in the section.
-\item The error or success code for starting the \lstinline|Listener|. Set in \lstinline|server_runner|. explained later in the section.
+\item A pointer to the \lstinline|Listener| instance for the server. Created in \lstinline|server_runner|, explained later in this section.
+\item The error or success code for starting the \lstinline|Listener|. Set in \lstinline|server_runner|. explained later in this section.
 \item A flag for when to stop the server. Set when \lstinline|stop_server| is called.
 \end{itemize}
 As this is being set up, a thread is started, with the \lstinline|server_runner| as entry point and the \lstinline|ServerInfo| instance as parameter at line 12. After this the function uses a mutex
-to block the calling thread, until the new thread has attempted to start the listener and has the \lstinline|ServerInfo| instance contains information about whether it was successful.
+to block the calling thread, until the new thread has attempted to start the listener and the \lstinline|ServerInfo| instance contains information about whether it was successful.
 This is done so the calling thread can check for errors immediately after \lstinline|run_server| returns.
 
 \lstinputlisting[label=lst:framework_run_server,caption=Framework - run\_server,language=c++]{lst/framework_run_server.cpp}
 
 \subsubsection{Server Runner}
-The \lstinline|server_runner| is, as mentioned, the entry point of the thread that the server will run on. The code for this function can be seen in \autoref{lst:server:runner}.
-The first thing happening in this function is the creation and starting of a \lstinline|Listener| instance, saving the results of this to the associated \lstinline|ServerInfo|.
+The \lstinline|server_runner| is, as mentioned, the entry point of the thread that the server will run on. The code for this function can be seen in \autoref{lst:server_runner}.
+The first thing happening in this function is the creation and starting of a \lstinline|Listener| instance, saving whether the \lstinline|Listener| started successfully to the associated \lstinline|ServerInfo|.
 After this is done, the mutex blocking the calling thread is released at line 11, allowing the main application to continue while the server is running.
 
 If any errors has happened at this point, the thread will exit. If not, it will enter a loop, where it will attempt to accept clients until it is asked to stop by a call to \lstinline|stop_server|.
 When looking at the code at line 24-29, between accepting the client and handling it, there is an additional check for whether the server has been asked to stop, that will break the loop
 if this is the case. The reason for this seemingly strange check is the blocking nature of \lstinline|accept_client|. This block creates the necessity for \lstinline|stop_server| to initiate
-a connection to the server, to ensure that it stops immediately. This check makes sure that connection is just discarded.
+a connection to the server, to ensure that it stops immediately. This check makes sure that particular connection is just discarded.
 
 At this point, by line 33, the client will be handled. This is done by setting up a \lstinline|ClientInfo|, a simple structure containing the desired callback,
 as well as a pointer to the \lstinline|Connection| instance for communicating with the client.
-Then a thread is started with \lstinline|client_runner| as entry point and the \lstinline|ClientInfo| as parameter.
+Then, a thread is started with \lstinline|client_runner| as entry point and the \lstinline|ClientInfo| as parameter.
 
 After the accept loop is broken, the function stops the \lstinline|Listener|, and exits the thread.
 
