--- a/report/tex/manual/install_instructions.tex
+++ b/report/tex/manual/install_instructions.tex
@@ -1,9 +1,10 @@
 \section{Installation Instructions}
+Below is the install instructions for the server application and Puddle.
 
 \subsection{Hardcoded Information}
-It should be noted, that the IP, port and name of the database is hardcoded into the database in the constructor for the \ac{api} class in the serverside code. In the OasisLib dummy the IP and port of the server is hardcoded. In Puddle the IP, name of the central database, username and password for the central database, as well as insertion of information when pressing the Insert button are hardcoded. These are all found in the MainActivity.
+It should be noted, that the IP, port and name of the database is hardcoded into the constructor for the \ac{api} class in the serverside code. In Puddle the IP address, name of the central database, username and password for the central database, as well as insertion of information when pressing the Insert button is hardcoded. For Puddle are hardcoded information is found in the \lstinline|MainActivity|.
 
-\subsection{Prerequisites for the serverapp installation}
+\subsection{Prerequisites for the server application installation}
 The system running the serverside application is expected to run on a Linux system with MySQL installed.
 
 \begin{itemize}
@@ -25,7 +26,8 @@ The system running the serverside application is expected to run on a Linux syst
 
 \subsection{Building the Program}
 \begin{itemize}
-\item cd to \lstinline|source/server|
+\item Download the code from \citep{install}.
+\item In the terminal cd to \lstinline|source/server|
 \item run \lstinline|make all|
 \item run \lstinline|./serverapp|
 \end{itemize}
@@ -33,14 +35,14 @@ The server is now running. Type \lstinline|stop| to exit.
 
 \subsection{Running Unit Tests}
 \begin{itemize}
-\item cd to \lstinline|source/server|
+\item In the terminal cd to \lstinline|source/server|
 \item run \lstinline|make test|
 \item run \lstinline|./test_connection|, \lstinline|./test_database| or 
 \lstinline|./test_api|.
 \end{itemize}
-Database unit test requires a database called \lstinline|giraf| accessible by user \lstinline|giraf@localhost| identified by \lstinline|123456|.
+The database unit test requires a database called \lstinline|giraf| accessible by user \lstinline|giraf@localhost| identified by \lstinline|123456|.
 
-Connection unit test requires right to open listening sockets and ports \lstinline|1238| and \lstinline|1239| to be free.
+Connection unit test requires permission to open listening sockets and requires TCP ports \lstinline|1238| and \lstinline|1239| to be free.
 
 \subsection{Prerequisites for the Puddle Android application}
 \begin{itemize}
@@ -50,11 +52,14 @@ Connection unit test requires right to open listening sockets and ports \lstinli
 \item Connector/J library. Included in the library folder of the project. Can also be downloaded from \citep{mysqlconnectorj}.
 \end{itemize}
 
-\subsection{Building Puddle Android application}
+\subsection{Building Puddle Android Application}
 Import the project into your IDE, and build it. Importing in Eclipse can be done by pressing File -> Import -> Existing Projects into Workspace -> Select root directory and navigate to the Puddle folder.
 
+\subsection{Running the Puddle Android Application}
+Puddle requires Android version 3.0 or higher to run.
+
 \subsection{License}
-The report content is freely available, but publication (with source), only after agreement with the authors.
+The report content is freely available, but publication (with source), only with credit to the authors.
 
 GIRAF Database's source code is released under the GPLv3 \cite{GNUlicense} open source license. This means that you are free to inspect the source code at any time or contribute to the project yourself.
 
