--- a/report/tex/reflection/project_status.tex
+++ b/report/tex/reflection/project_status.tex
@@ -1,3 +1,3 @@
 \section{Project Status}
 
-Currently, the \ac{api} is implemented and tested with basic functionality and there is a central database containing all information needed to the best of our knowledge. There is a local database, however it is not accessible by applications at this moment. There is basic two-way synchronization between the central database and the local database. Everything is currently unencrypted. There are still some bugs in the code which need to be fixed.  
+Currently, the \ac{api} is implemented and tested with basic functionality and there is a central database containing all information needed to the best of our knowledge. There is a local database, however, as mentioned, it is not accessible by applications at this moment. There is basic two-way synchronization between the central database and the local database. Everything is currently unencrypted. There are still some problems in the code which need to be fixed.  
